--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ env:
     - secure: "VBJDQNJ9uvdt0aszo7oU3txuRvjkuLmuHZGOkrd4wE/5B4sX5jzx/+dnrKcNTXJCmQ/rVLuMu9GyxqVjNHlzce678voxdQNOtNkNgpkr1qN9/A9rRnCp77hH27ErdthpWxbmcnE62hAJ83TIKSvn//5lAkx4sMCKS1NXEWQ5qec="
     # HAXECI_GH_TOKEN: haxe-ci Github personal access token
     - secure: "TpEMYTLgNrVD7kR6hs6EwyWNXUxnfV6XO5MGvYQncKXB1N65PG18n4WQFhnKaH8C2QTFE7dq7688ooXGzwWeoT9WAOBey10jP1f7LXEAjMGAUA4vh2zS93qBZ92ZgzCDZnQN7ZOTQGocwU6Xolu+7/6hP2M8041HBixmFuNkXF4="
+    # lua specific versions
+    - LUAROCKS=2.3.0
+    - LUA=lua5.2
 
 sudo: false
 addons:
@@ -63,6 +66,11 @@ install:
     elif [ "${TRAVIS_OS_NAME}" = "osx" ]; then
       travis_retry brew install neko --HEAD;
     fi
+  # Install lua specific resources 
+  - source .travis/setenv_lua.sh
+  - pip install --user cpp-coveralls
+  - luarocks install lrexlib-pcre --server=https://luarocks.org/dev
+  - luarocks install luautf8 --server=https://luarocks.org/dev
 
 before_script:
   - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then
